2005-06-19  Jim Evins  <evins@snaught.com>

	* src/template-designer.c: (construct_layout_page):
		Removed attempt to match background color of mini preview widget to
		background.

2005-06-17  Jim Evins  <evins@snaught.com>

	* help/C/figures/merge-ex2-4.png:
	* help/C/glabels.xml:
		Fixed spelling error.

2005-06-13  Jim Evins  <evins@snaught.com>

	* help/C/figures/merge-ex1-1.png:
	* help/C/figures/merge-ex1-2.png:
	* help/C/figures/merge-ex1-3.png:
	* help/C/figures/merge-ex1-4.png:
	* help/C/figures/merge-ex2-1.png:
	* help/C/figures/merge-ex2-2.png:
	* help/C/figures/merge-ex2-3.png:
	* help/C/figures/merge-ex2-4.png:
		Added figures for document merge tutorial.
	* help/C/glabels.xml:
		Added document merge tutorial.

2005-05-19  Jim Evins  <evins@snaught.com>

	* data/glade/merge-properties-dialog.glade:
		Fixed irregular spacing.
	* src/merge-properties-dialog.c: (gl_merge_properties_dialog_init),
	(gl_merge_properties_dialog_construct):
		Set outer padding and remove separator.

2005-05-18  Jim Evins  <evins@snaught.com>

	* src/hig.h:
	* src/hig.c:
		Removed glHigDialog class.
	* src/file.c: (gl_file_new), (create_new_dialog_widgets),
	(gl_file_properties), (create_properties_dialog_widgets):
	* src/prefs-dialog.h:
	* src/prefs-dialog.c: (gl_prefs_dialog_get_type),
	(gl_prefs_dialog_init), (gl_prefs_dialog_construct):
	* src/print-dialog.h:
	* src/prefs-dialog.h:
	* src/print-dialog.c: (gl_print_dialog_get_type),
	(gl_print_dialog_init), (gl_print_dialog_construct):
		Replaced all instances of glHigDialog with GtkDialog.
	
2005-05-17  Jim Evins  <evins@snaught.com>

	* src/hig.h:
	* src/hig.c:
		Removed HigAlert class since it is obsoleted by the GtkMessageDialog class.
	* src/file.c: (open_response), (gl_file_open_real), (gl_file_save),
	(save_as_response), (gl_file_close):
		Replaced all instances of HigAlert widgets with GtkMessageDialog widgets.

2005-05-15  Jim Evins  <evins@snaught.com>

	* src/ui-commands.h:
	* src/ui-util.c:
	* src/ui-util.h: