@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.52)
 
-AC_INIT(glabels, 2.1.1cvs, http://sourceforge.net/tracker/?func=add&group_id=46122&atid=445116)
+AC_INIT(glabels, 2.1.1, http://sourceforge.net/tracker/?func=add&group_id=46122&atid=445116)
 AC_CONFIG_SRCDIR(src/glabels.c)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
@@ -39,8 +39,8 @@ dnl    increment current, and set revision to 0.
 dnl 5. If any interfaces have been added since the last public release, then increment age.
 dnl 6. If any interfaces have been removed since the last public release, then set age
 dnl    to 0.
-LIBGLABELS_C=1
-LIBGLABELS_R=1
+LIBGLABELS_C=2
+LIBGLABELS_R=0
 LIBGLABELS_A=0
 
 LIBGLABELS_VERSION_INFO=${LIBGLABELS_C}:${LIBGLABELS_R}:${LIBGLABELS_A}
