@@ -1,3 +1,13 @@
+2005-06-20  Jim Evins  <evins@snaught.com>
+
+	* configure.in:
+		Final preps for 2.1.1 release.
+	* docs/libglabels/libglabels.types:
+		Somehow never got checked in before.
+	* po/POTFILES.in:
+		Bring up-to-date with recent reorg of ui code.
+		
+
 2005-06-19  Jim Evins  <evins@snaught.com>
 
 	* src/template-designer.c: (construct_layout_page):
